feat: (#1) LoginManager 생성 및 OAuth 구현

--- a/IssueTracker/IssueTracker/Presenter/Supports/Base.lproj/Main.storyboard
+++ b/IssueTracker/IssueTracker/Presenter/Supports/Base.lproj/Main.storyboard
@@ -185,6 +185,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="githubLogInButton" destination="EPC-sz-ysq" id="Z8u-OR-3cF"/>
                         <outlet property="logInButton" destination="Q2b-Cg-4OD" id="7Xy-il-FrF"/>
                     </connections>
                 </viewController>
