--- a/FE/src/index.css
+++ b/FE/src/index.css
@@ -19,7 +19,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     padding: 0;
     border: 0;
     outline: 0;
-    /* font-size: 100%; // 사용안함 */
+    font-size: 100%;
     vertical-align: baseline;
     background: transparent;
 }
