[#11] feat: footerView 추가, searchBar mic 추가

--- a/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
+++ b/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
@@ -228,6 +228,21 @@
             </objects>
             <point key="canvasLocation" x="3097.1014492753625" y="107.8125"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="sDu-FI-rgj">
+            <objects>
+                <viewController id="q2y-Ti-QDY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8yc-tD-kEU">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="RIZ-qq-QqX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dZa-bc-y9P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3097" y="798"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="J67-YZ-aC2">
             <objects>
