--- a/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
+++ b/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oAx-ab-YaI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q2y-Ti-QDY">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -228,20 +228,115 @@
             </objects>
             <point key="canvasLocation" x="3097.1014492753625" y="107.8125"/>
         </scene>
-        <!--View Controller-->
+        <!--Issue List Filter View Controller-->
         <scene sceneID="sDu-FI-rgj">
             <objects>
-                <viewController id="q2y-Ti-QDY" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="IssueListFilterViewController" id="q2y-Ti-QDY" customClass="IssueListFilterViewController" customModule="issue_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8yc-tD-kEU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cly-7M-egq">
+                                <rect key="frame" x="0.0" y="44" width="414" height="110"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iOb-pU-3lT">
+                                        <rect key="frame" x="16" y="44.5" width="42.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="tintColor" systemColor="linkColor"/>
+                                        <state key="normal" title="취소" image="chevron.left" catalog="system">
+                                            <color key="titleColor" systemColor="linkColor"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H6l-7V-O8E">
+                                        <rect key="frame" x="368" y="38.5" width="30" height="33"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <state key="normal" title="저장"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="필터" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BFF-as-Kb2">
+                                        <rect key="frame" x="192.5" y="44.5" width="29.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="BFF-as-Kb2" firstAttribute="leading" relation="lessThanOrEqual" secondItem="iOb-pU-3lT" secondAttribute="trailing" constant="134" id="0Os-IM-m6s"/>
+                                    <constraint firstItem="BFF-as-Kb2" firstAttribute="centerY" secondItem="cly-7M-egq" secondAttribute="centerY" id="3An-E6-mEK"/>
+                                    <constraint firstItem="H6l-7V-O8E" firstAttribute="centerY" secondItem="cly-7M-egq" secondAttribute="centerY" id="BJB-nw-393"/>
+                                    <constraint firstAttribute="trailing" secondItem="H6l-7V-O8E" secondAttribute="trailing" constant="16" id="OMp-S8-ooz"/>
+                                    <constraint firstItem="iOb-pU-3lT" firstAttribute="leading" secondItem="cly-7M-egq" secondAttribute="leading" constant="16" id="rrH-DH-WP8"/>
+                                    <constraint firstItem="iOb-pU-3lT" firstAttribute="centerY" secondItem="cly-7M-egq" secondAttribute="centerY" id="sk3-3U-awS"/>
+                                    <constraint firstItem="H6l-7V-O8E" firstAttribute="leading" relation="lessThanOrEqual" secondItem="BFF-as-Kb2" secondAttribute="trailing" constant="146" id="wnY-KT-hJu"/>
+                                    <constraint firstAttribute="height" constant="110" id="xL9-PU-KKS"/>
+                                    <constraint firstItem="BFF-as-Kb2" firstAttribute="centerX" secondItem="cly-7M-egq" secondAttribute="centerX" id="z4O-uv-AZG"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fXx-No-t8h">
+                                <rect key="frame" x="0.0" y="154" width="414" height="708"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FilterTableViewCell" id="cRv-xz-dmN">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cRv-xz-dmN" id="XGn-Tp-k5L" customClass="FilterTableViewCell" customModule="issue_tracker" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BoK-mv-hkG">
+                                                    <rect key="frame" x="20" y="11.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="AB4-go-L1g">
+                                                    <rect key="frame" x="368" y="10.5" width="30" height="23.5"/>
+                                                    <color key="tintColor" systemColor="systemGreenColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="oVS-bK-PyF"/>
+                                                        <constraint firstAttribute="width" constant="30" id="shA-dZ-Lv5"/>
+                                                    </constraints>
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="AB4-go-L1g" secondAttribute="trailing" constant="16" id="FUg-uh-EQj"/>
+                                                <constraint firstItem="AB4-go-L1g" firstAttribute="centerY" secondItem="XGn-Tp-k5L" secondAttribute="centerY" id="Ztl-nh-c2i"/>
+                                                <constraint firstItem="BoK-mv-hkG" firstAttribute="leading" secondItem="XGn-Tp-k5L" secondAttribute="leading" constant="20" id="f1V-Is-hxz"/>
+                                                <constraint firstItem="BoK-mv-hkG" firstAttribute="centerY" secondItem="XGn-Tp-k5L" secondAttribute="centerY" id="h7P-K1-U3P"/>
+                                            </constraints>
+                                            <connections>
+                                                <outlet property="checkImage" destination="AB4-go-L1g" id="Qay-Zb-SAT"/>
+                                                <outlet property="title" destination="BoK-mv-hkG" id="3df-pD-v7b"/>
+                                            </connections>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="q2y-Ti-QDY" id="5kH-cP-jk4"/>
+                                    <outlet property="delegate" destination="q2y-Ti-QDY" id="L0S-nA-tTn"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="RIZ-qq-QqX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fXx-No-t8h" firstAttribute="top" secondItem="cly-7M-egq" secondAttribute="bottom" id="2yT-IJ-xgO"/>
+                            <constraint firstItem="cly-7M-egq" firstAttribute="top" secondItem="8yc-tD-kEU" secondAttribute="topMargin" id="5gc-1d-v0u"/>
+                            <constraint firstItem="RIZ-qq-QqX" firstAttribute="trailing" secondItem="fXx-No-t8h" secondAttribute="trailing" id="734-1y-eJV"/>
+                            <constraint firstItem="RIZ-qq-QqX" firstAttribute="trailing" secondItem="cly-7M-egq" secondAttribute="trailing" id="NKM-2i-4if"/>
+                            <constraint firstItem="RIZ-qq-QqX" firstAttribute="bottom" secondItem="fXx-No-t8h" secondAttribute="bottom" id="T0U-QC-xP9"/>
+                            <constraint firstItem="cly-7M-egq" firstAttribute="leading" secondItem="RIZ-qq-QqX" secondAttribute="leading" id="eyi-8r-kAE"/>
+                            <constraint firstItem="fXx-No-t8h" firstAttribute="leading" secondItem="RIZ-qq-QqX" secondAttribute="leading" id="us7-Dq-pVB"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="filterTableView" destination="fXx-No-t8h" id="h92-Ic-NfU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dZa-bc-y9P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3097" y="798"/>
+            <point key="canvasLocation" x="3095.6521739130435" y="797.54464285714278"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="J67-YZ-aC2">
@@ -319,13 +414,21 @@
     <resources>
         <image name="GitHubImage" width="24" height="24"/>
         <image name="applelogo" catalog="system" width="103" height="128"/>
+        <image name="checkmark" catalog="system" width="128" height="114"/>
+        <image name="chevron.left" catalog="system" width="96" height="128"/>
         <image name="exclamationmark.circle" catalog="system" width="128" height="121"/>
         <image name="mileStoneImage" width="17" height="18"/>
         <image name="person.circle" catalog="system" width="128" height="121"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
         <image name="tagImage" width="18" height="18"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
