--- a/FE/src/index.css
+++ b/FE/src/index.css
@@ -4,6 +4,9 @@ html { font-size: 10px; }
 
 /* reset css */
 
+* {
+    box-sizing: border-box;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ */
 /* v1.0 | 20080212 */
 html, body, div, span, applet, object, iframe,
